--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,7 @@
     <string name="game_card_title">Against %s (%d)</string>
     <string name="logout_button">Sign Out</string>
     <string name="cell_position">Row %d, Column %d</string>
+    <string name="surrender_dialog_confirm">Surrender</string>
+    <string name="surrender_dialog_title">Confirm you want to surrender</string>
+    <string name="surrender_dialog_desc">Are you sure you want to abandon?\nYou will loose the game!</string>
 </resources>
